...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.repolist.RepoListFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repo_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:itemCount="5"
        android:scrollbars="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/search_repos"
        tools:listitem="@layout/item_repo" />

    <EditText
        android:id="@+id/search_repos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/search_repositories_by_name"
        android:text="@string/android"
        android:maxLines="1"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toStartOf="@id/btn_search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="wrap_content"
...
        app:layout_constraintBottom_toBottomOf="@id/search_repos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_repos"
        app:layout_constraintTop_toTopOf="@id/search_repos" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
