<resources>
    <string name="app_name">GitHub App</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Repository List</string>
    <string name="second_fragment_label">Repository Details</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="search_repositories_by_name">Search repositories by name</string>
    <string name="android">Android</string>
    <string name="toast_error">Something goes wrong</string>
    <string name="who_knows">Who knows</string>
    <string name="created_at">"Created at: %s"</string>
    <string name="created_by">"Created by:\n%s"</string>
    <string name="updated_at">"Updated at: %s"</string>
    <string name="see_more_at">"See more at: %s"</string>
    <string name="stars">"Stars: %d"</string>
    <string name="description">"Description: %s"</string>
    <string name="avatar">Avatar</string>


    <string name="button_main">Send</string>
    <string name="editText_main">Enter Your Message Here</string>
    <string name="text_header">Message Received</string>
    <string name="button_second">Reply</string>
    <string name="editText_second">Enter Your Reply Here</string>
    <string name="text_header_reply">Reply Received</string>

    <string name="show">Show</string>
    <string name="hint_phonenumber">Enter a phone number</string>
    <string name="phonenumber_label">Phone Number:</string>
    <string name="nothing_entered">Nothing entered</string>

    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>

    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="initial_count">0</string>
    <string name="minus_button_description">Minus Button</string>
    <string name="plus_button_description">Plus Button</string>
    <string name="night_mode">Night Mode</string>
    <string name="day_mode">Day Mode</string>
</resources>